--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
 
         </activity>
         <activity
-            android:name=".PinEntryView"
+            android:name=".PinEntryActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar">
 
