--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:25.3.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    implementation 'com.android.support:cardview-v7:25.3.1'
     implementation 'com.android.support:support-v4:25.3.1'
     implementation 'de.cketti.library.changelog:ckchangelog:1.2.2'
     implementation group: 'com.opencsv', name: 'opencsv', version: '4.0'
@@ -47,4 +47,7 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+
 }
