--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
 
     <application
-        android:name= "pipi.win.a2048.MainApplication"
+        android:name="pipi.win.a2048.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,31 +25,31 @@
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".PinEntryActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar">
-
-        </activity>
+            android:theme="@android:style/Theme.NoTitleBar"></activity>
 
         <service android:name=".SensorService" />
 
-        <activity android:name="pipi.win.a2048.activity.LockScreenActivity"
-            android:theme="@style/AppThemeCompat"
+        <activity
+            android:name="pipi.win.a2048.activity.LockScreenActivity"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/AppThemeCompat">
+
+        </activity>
+        <activity android:theme="@style/AppThemeCompat"
+            android:name="pipi.win.a2048.activity.TestServiceActivity">
 
 
         </activity>
