--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
+
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.uberspot.a2048"
         minSdkVersion 21
@@ -38,8 +40,9 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.0'
-    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    implementation 'com.andrognito.patternlockview:patternlockview-reactive:1.0.0'
+
+    //implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    //implementation 'com.andrognito.patternlockview:patternlockview-reactive:1.0.0'
     //testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.1'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
