--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,22 +34,25 @@
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PinEntryActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar" />
 
         <service android:name=".SensorService" />
 
         <activity
             android:name="pipi.win.a2048.activity.LockScreenActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/AppThemeCompat"></activity>
+        <activity
+            android:name="pipi.win.a2048.activity.test.TestServiceActivity"
+            android:theme="@style/AppThemeCompat"></activity>
+        <activity
+            android:name="pipi.win.a2048.activity.DataCollectSettingActivity"
+            android:label="@string/action_settings"
             android:theme="@style/AppThemeCompat">
-
-        </activity>
-        <activity android:theme="@style/AppThemeCompat"
-            android:name="pipi.win.a2048.activity.test.TestServiceActivity">
 
 
         </activity>
