--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        mavenLocal()
+        mavenCentral()
         jcenter()
+        google()
         maven { url "https://jitpack.io" }
     }
 }
