--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     
     applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "a2048.${variant.name}-${variant.versionName}.apk"
+            outputFileName = "${applicationId}.${variant.name}-${variant.versionName}.apk"
         }
     }
     lintOptions {
@@ -44,14 +44,12 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
 
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.0'
 
-    //implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    //implementation 'com.andrognito.patternlockview:patternlockview-reactive:1.0.0'
-    //testImplementation 'junit:junit:4.12'
-    //androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 
     implementation 'com.jakewharton:butterknife:8.8.1'
