--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uberspot.a2048">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -11,6 +12,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name="pipi.win.a2048.MainApplication"
@@ -45,10 +47,14 @@
         <activity
             android:name="pipi.win.a2048.activity.LockScreenActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppThemeCompat"></activity>
+            android:theme="@style/AppThemeCompat">
+
+        </activity>
         <activity
             android:name="pipi.win.a2048.activity.test.TestServiceActivity"
-            android:theme="@style/AppThemeCompat"></activity>
+            android:theme="@style/AppThemeCompat">
+
+        </activity>
         <activity
             android:name="pipi.win.a2048.activity.DataCollectSettingActivity"
             android:label="@string/action_settings"
